--- a/pages/patient/nos-services.html
+++ b/pages/patient/nos-services.html
@@ -6,19 +6,19 @@
     <title>e-POKRATE</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="stylesheet" href="../css/pages.css">
-    <link rel="stylesheet" href="../css/message.css">
+    <link rel="stylesheet" href="../../css/pages.css">
+    <link rel="stylesheet" href="../../css/message.css">
 
     <!----------------------- favicon ------------------------------->
     <link rel="manifest" href="/manifest.json">
 
-    <link rel="icon" href="../favicon.ico" type="image/x-icon" />
-    <link rel="apple-touch-icon" href="../images/EPK-icon-152x152.png">
+    <link rel="icon" href="../../favicon.ico" type="image/x-icon" />
+    <link rel="apple-touch-icon" href="../../images/EPK-icon-152x152.png">
     <meta name="theme-color" content="white" />
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <meta name="apple-mobile-web-app-title" content="E-POKRATE">
-    <meta name="msapplication-TileImage" content="../images/EPK-icon-144x144.png">
+    <meta name="msapplication-TileImage" content="../../images/EPK-icon-144x144.png">
     <meta name="msapplication-TileColor" content="#FFFFFF">
 </head>
 
@@ -27,7 +27,7 @@
     <div class="surPC">
         <!--* LOGO E-POKRATE sur PC *-->
         <div class="title-icon">
-            <img src="../images/Logo page de Bienvenue.png">
+            <img src="../../images/Logo page de Bienvenue.png">
         </div>
         <!--* Messages d'information sur PC *-->
         <h3>
@@ -47,7 +47,7 @@
     <main>
         <!--## Début du main ##-->
         <!--*** images des services ***-->
-        <img src="../images/Telemedicina_famiglia.jpg" alt="image de connexion" class="imgPremière" width="1000" height="300">
+        <img src="../../images/Telemedicina_famiglia.jpg" alt="image de connexion" class="imgPremière" width="280" height="200">
 
         <div class="textes">
             <h2>Que souhaitez-vous faire ?</h2>
@@ -67,17 +67,17 @@
         <section>
             <!-- Service 1 -->
             <div class="card card-1">
-                <img src="../images/img-EPK1.jpeg" alt="Consultation" width="80" height="80">
+                <img src="../../images/icons/img-EPK1.png" alt="Consultation" width="80" height="80">
                 <button type="submit" class="bouton2 bouton2-block"><a href="choisir-medecin.html">Consultation</a></button>
             </div>
             <!-- Service 2 -->
             <div class="card card-2">
-                <img src="../images/img-EPK1.jpeg" alt="Rendez-vous" width="80" height="80">
+                <img src="../../images/icons/Icône_Rendez.png" alt="Rendez-vous" width="80" height="80">
                 <button type="submit" class="bouton2 bouton2-block"><a href="choisir-medecin.html">Rendez-vous</a></button>
             </div>
             <!-- Service 3 -->
             <div class="card card-3">
-                <img src="../images/img-EPK1.jpeg" alt="livraison" width="80" height="80">
+                <img src="../../images/icons/Icône_Livraison.png" alt="livraison" width="80" height="80">
                 <button type="submit" class="bouton2 bouton2-block"><a href="#">Livraison</a></button>
             </div>
         </section>
