--- a/pages/patient/page-connexion.html
+++ b/pages/patient/page-connexion.html
@@ -6,18 +6,18 @@
     <title>e-POKRATE</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/message.css">
+    <link rel="stylesheet" href="../../css/style.css">
+    <link rel="stylesheet" href="../../css/message.css">
     <!----------------------- favicon ------------------------------->
     <link rel="manifest" href="/manifest.json">
 
-    <link rel="icon" href="favicon.ico" type="image/x-icon" />
-    <link rel="apple-touch-icon" href="images/EPK-icon-152x152.png">
+    <link rel="icon" href="../../favicon.ico" type="image/x-icon" />
+    <link rel="apple-touch-icon" href="../../images/EPK-icon-152x152.png">
     <meta name="theme-color" content="white" />
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <meta name="apple-mobile-web-app-title" content="E-POKRATE">
-    <meta name="msapplication-TileImage" content="images/EPK-icon-144x144.png">
+    <meta name="msapplication-TileImage" content="../../images/EPK-icon-144x144.png">
     <meta name="msapplication-TileColor" content="#FFFFFF">
 
 </head>
@@ -27,7 +27,7 @@
     <div class="surPC">
         <!--* LOGO E-POKRATE sur PC *-->
         <div class="title-icon">
-            <img src="images/Logo page de Bienvenue.png">
+            <img src="../../images/Logo page de Bienvenue.png">
         </div>
         <!--* Messages d'information sur PC *-->
         <h3>
@@ -39,42 +39,58 @@
     </div>
     <!-------- Fin de l'affichage sur PC  -------->
 
+
     <!-------- Début de l'affichage sur mobile -------->
     <main>
 
         <!--## Titre de la page ##-->
         <div class="header">
             <div id="header-sroll">
-                <!--<h1>Bienvenue sur e-POKRATE</h1>--->
-                <img src="images/Logo page de Bienvenue.png">
+                <h1>Bienvenue sur e-POKRATE</h1>
+                <!--<img src="../../images/Logo page de Bienvenue.png">--->
             </div>
         </div>
         <!----- Tout le contenu du main ----->
         <div class="accueil">
             <!--* LOGO E-POKRATE sur PC *-->
-            <div class="accueil_Logo">
-                <img src="images/icons/img-EPK1.png">
+            <div class="connexion_Logo">
+                <img src="../../images/Logo page de Bienvenue.png">
             </div>
             <!--* Messages d'accueil *-->
-            <h3>
-                Consultez un médecin en vidéo
-            </h3>
+            <div class="textes">
+                <h2>Connectez-vous</h2>
+                <p>Connectez-vous à l’aide de vos identifiants et mot de passe pour commencer à utiliser l’application</p>
+            </div>
+            <form>
+                <div>
+                    <input type="text" name="mail" placeholder="Identifiant ou adresse e-mail" class="input" required autofocus />
+                </div>
+                <div>
+                    <input type="password" name="password" placeholder="Mot de passe" class="input" required autofocus />
+                </div>
+            </form>
             <!--* Boutons d'inscription *-->
             <div id="les-boutons">
-                <button type="submit" class="bouton1 bouton-block"><a href="pages/patient/nos-services.html">CRÉER UN COMPTE</a></button>
-                <button type="submit" class="bouton1-2 bouton-block"><a href="pages/patient/nos-services.html">SE CONNECTER</a></button>
+                <button type="submit" class="bouton1 bouton-block"><a href="#">CONNEXION</a></button>
+                <!--*<button type="submit" class="bouton1-2 bouton-block"><a href="#">SE CONNECTER</a></button>*-->
             </div>
+        </div>
+        <div class="compte">
+            <p>
+                <a href="#"> <span>Mot de passe oublié ?</span></a>
+            </p>
+            <p><a href="#">Vous n’avez pas encore de compte ? <span>&vert; Enregistrez-vous</span></a></p>
         </div>
         <!--* Les conditions d'inscription
         <div class="compte ">
             <p>En validant votre inscription, vous acceptez nos
                 <a href="#"><span>conditions générale de vente</span></a>
             </p>
-        </div>*-->
+        </div> *-->
     </main>
 
-    <!--File main.js -->
-    <script src="js/main.js"></script>
+    <!--File main.js 
+    <script src="js/main.js"></script>-->
 </body>
 
 </html>
